[gd_scene load_steps=2 format=3 uid="uid://dqk8rrr8lwej0"]

[ext_resource type="Script" uid="uid://y4keoktdhqjd" path="res://addons/MapManager/Nodes/plugin_nodes/graph_node.gd" id="1_rajny"]

[node name="GraphNode" type="GraphNode"]
offset_right = 319.0
offset_bottom = 261.0
title = "Map_Name"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_rajny")

[node name="FunctionArea" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FunctionArea"]
layout_mode = 2

[node name="NoSceneLoaded" type="PanelContainer" parent="FunctionArea/VBoxContainer"]
layout_mode = 2

[node name="LoadScene" type="Button" parent="FunctionArea/VBoxContainer/NoSceneLoaded"]
layout_mode = 2
text = "load Scene"

[node name="SceneLoaded" type="PanelContainer" parent="FunctionArea/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FunctionArea/VBoxContainer/SceneLoaded"]
layout_mode = 2

[node name="UnloadScene" type="Button" parent="FunctionArea/VBoxContainer/SceneLoaded/VBoxContainer"]
layout_mode = 2
text = "unload"

[node name="Label" type="Label" parent="FunctionArea/VBoxContainer"]
layout_mode = 2
text = "connections"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="position_offset_changed" from="." to="." method="_on_position_offset_changed"]
[connection signal="pressed" from="FunctionArea/VBoxContainer/NoSceneLoaded/LoadScene" to="." method="_on_load_scene_pressed"]
